--- a/heart_disease.ipynb
+++ b/heart_disease.ipynb
@@ -25,7 +25,7 @@
         "outputId": "d7159fa3-d77f-4494-8fd9-fa8d99f86ca1"
       },
       "id": "Ug14GrkBsJH_",
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -232,7 +232,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "5220041b-54ce-4e33-9b79-b99798ade39a",
       "metadata": {
         "id": "5220041b-54ce-4e33-9b79-b99798ade39a"
@@ -250,7 +250,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "e8b707db-e299-47ed-a4b3-83bae3d954f8",
       "metadata": {
         "id": "e8b707db-e299-47ed-a4b3-83bae3d954f8",
@@ -289,7 +289,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "8feef126-d91b-4efa-bbf9-69fad02c8a58",
       "metadata": {
         "id": "8feef126-d91b-4efa-bbf9-69fad02c8a58",
@@ -327,7 +327,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "e35112aa-abef-4044-a99f-e9c6d960bd53",
       "metadata": {
         "id": "e35112aa-abef-4044-a99f-e9c6d960bd53",
@@ -372,7 +372,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "61315555-6405-41c8-b9ff-6d8864202c7d",
       "metadata": {
         "id": "61315555-6405-41c8-b9ff-6d8864202c7d",
@@ -424,7 +424,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "id": "0e548029-77f5-47fb-b1a7-8f3bcd7ab0c4",
       "metadata": {
         "id": "0e548029-77f5-47fb-b1a7-8f3bcd7ab0c4",
@@ -519,7 +519,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "id": "eb66f34b-783b-4476-912b-2bd27b534c17",
       "metadata": {
         "id": "eb66f34b-783b-4476-912b-2bd27b534c17",
@@ -546,7 +546,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "id": "c48ce19b-395a-4352-b4c1-cb65c9620b66",
       "metadata": {
         "id": "c48ce19b-395a-4352-b4c1-cb65c9620b66",
@@ -587,7 +587,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "id": "07ef7468-dc9f-4aec-a91b-bd4d12774a89",
       "metadata": {
         "id": "07ef7468-dc9f-4aec-a91b-bd4d12774a89",
@@ -613,7 +613,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "id": "47a363eb-73b6-4998-ad63-7ec893520990",
       "metadata": {
         "id": "47a363eb-73b6-4998-ad63-7ec893520990",
@@ -640,7 +640,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "id": "8460dc6d-b017-4569-bc97-200109d5a22d",
       "metadata": {
         "id": "8460dc6d-b017-4569-bc97-200109d5a22d",
@@ -678,7 +678,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "id": "115117ac-3f8c-41b9-bb82-a9c864ff0a20",
       "metadata": {
         "id": "115117ac-3f8c-41b9-bb82-a9c864ff0a20",
@@ -705,7 +705,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "id": "aa4334ee-127e-4655-8000-28a9b9adff1a",
       "metadata": {
         "id": "aa4334ee-127e-4655-8000-28a9b9adff1a",
@@ -743,7 +743,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "id": "65610673-47e2-45c9-8871-7a8184bdb1a7",
       "metadata": {
         "id": "65610673-47e2-45c9-8871-7a8184bdb1a7",
@@ -838,7 +838,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "id": "7d79fd4a-7e67-4d06-972c-6a847a129ae0",
       "metadata": {
         "id": "7d79fd4a-7e67-4d06-972c-6a847a129ae0",
@@ -865,7 +865,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "id": "c4cf44b7-e512-4ac5-832b-ac66175b779f",
       "metadata": {
         "id": "c4cf44b7-e512-4ac5-832b-ac66175b779f",
@@ -903,7 +903,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "id": "209f2da2-c5f4-413a-8419-831fb71e96ac",
       "metadata": {
         "id": "209f2da2-c5f4-413a-8419-831fb71e96ac",
@@ -930,7 +930,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "id": "26b8d57a-36ae-4dc8-b414-a26f8df44e89",
       "metadata": {
         "id": "26b8d57a-36ae-4dc8-b414-a26f8df44e89",
@@ -968,7 +968,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "id": "c6ab51bd-734c-475c-a37f-afc394cfd34d",
       "metadata": {
         "id": "c6ab51bd-734c-475c-a37f-afc394cfd34d",
@@ -995,7 +995,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "id": "1f5b20c8-6745-453d-9750-b0a528879b07",
       "metadata": {
         "id": "1f5b20c8-6745-453d-9750-b0a528879b07",
@@ -1033,7 +1033,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "id": "375849b6-c4c3-486e-b2a6-7e2b595d2886",
       "metadata": {
         "id": "375849b6-c4c3-486e-b2a6-7e2b595d2886",
@@ -1060,7 +1060,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "id": "fc34f335-fa72-4b99-88ce-07654025b0d2",
       "metadata": {
         "id": "fc34f335-fa72-4b99-88ce-07654025b0d2",
@@ -1098,7 +1098,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "id": "ca7c79e7-f8ff-4cfe-864a-0936979ae375",
       "metadata": {
         "id": "ca7c79e7-f8ff-4cfe-864a-0936979ae375",
@@ -1125,7 +1125,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "id": "c7ea7291-3dca-4727-b1e7-ffa56f74e0a9",
       "metadata": {
         "id": "c7ea7291-3dca-4727-b1e7-ffa56f74e0a9",
@@ -1163,7 +1163,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "id": "22f1c3a6-8753-4c1b-aab3-444e63eecaa0",
       "metadata": {
         "id": "22f1c3a6-8753-4c1b-aab3-444e63eecaa0",
@@ -1190,7 +1190,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "id": "606654db-02ca-4722-aa8c-f1fff4246e94",
       "metadata": {
         "id": "606654db-02ca-4722-aa8c-f1fff4246e94",
@@ -1228,7 +1228,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "id": "c4f477f1-c378-45ef-af86-2773a333cd4f",
       "metadata": {
         "id": "c4f477f1-c378-45ef-af86-2773a333cd4f"
@@ -1241,7 +1241,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "id": "d68977b8-d93b-4466-8393-273c277ae3f4",
       "metadata": {
         "id": "d68977b8-d93b-4466-8393-273c277ae3f4"
@@ -1253,7 +1253,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "id": "16e81f54-c923-4310-a26d-1747e3212eae",
       "metadata": {
         "id": "16e81f54-c923-4310-a26d-1747e3212eae"
@@ -1267,7 +1267,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "id": "8309df2e-dda3-495a-9e17-b8e3e2ee9c9d",
       "metadata": {
         "id": "8309df2e-dda3-495a-9e17-b8e3e2ee9c9d",
@@ -1300,7 +1300,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "id": "476280a5-b984-405f-94b2-7a8620d5294a",
       "metadata": {
         "id": "476280a5-b984-405f-94b2-7a8620d5294a",
@@ -1333,7 +1333,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": null,
       "id": "0b9c7e1b-0536-4f34-b366-b129cfe82351",
       "metadata": {
         "id": "0b9c7e1b-0536-4f34-b366-b129cfe82351",
@@ -1364,7 +1364,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": null,
       "id": "ad2744ba-3543-40bb-a6ea-96a957d40656",
       "metadata": {
         "id": "ad2744ba-3543-40bb-a6ea-96a957d40656",
@@ -1812,7 +1812,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": null,
       "id": "0ca7ebf3-7002-4e9c-979f-ed5e58fecdf7",
       "metadata": {
         "id": "0ca7ebf3-7002-4e9c-979f-ed5e58fecdf7"
@@ -1824,7 +1824,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": null,
       "id": "64d14a9e-e9de-4981-a9a4-d532b54cdd56",
       "metadata": {
         "id": "64d14a9e-e9de-4981-a9a4-d532b54cdd56"
@@ -1838,7 +1838,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": null,
       "id": "b984f88f-e8d0-41b0-b3cd-aba5447a0665",
       "metadata": {
         "id": "b984f88f-e8d0-41b0-b3cd-aba5447a0665",
@@ -1882,7 +1882,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": null,
       "id": "b76e54f5-0edc-4ac4-907e-fbe0a08291fa",
       "metadata": {
         "id": "b76e54f5-0edc-4ac4-907e-fbe0a08291fa",
@@ -1915,7 +1915,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": null,
       "id": "e46fceab-158d-42c7-beec-7887de64c74a",
       "metadata": {
         "id": "e46fceab-158d-42c7-beec-7887de64c74a"
@@ -1930,7 +1930,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": null,
       "id": "bb2447d0-7f22-47ac-ac3e-cf9ae65956f0",
       "metadata": {
         "id": "bb2447d0-7f22-47ac-ac3e-cf9ae65956f0"
@@ -1944,7 +1944,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": null,
       "id": "eaaafe2d-4d7c-4979-a8ee-00fcc71d926f",
       "metadata": {
         "id": "eaaafe2d-4d7c-4979-a8ee-00fcc71d926f",
@@ -1988,7 +1988,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": null,
       "id": "4470bc7b-00b2-46ab-8b85-c749c83b1b1d",
       "metadata": {
         "id": "4470bc7b-00b2-46ab-8b85-c749c83b1b1d",
@@ -2021,7 +2021,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": null,
       "id": "394458eb-5267-4eb2-80ef-eac2178704b9",
       "metadata": {
         "id": "394458eb-5267-4eb2-80ef-eac2178704b9"
@@ -2036,7 +2036,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": null,
       "id": "85611fa1-af85-40f9-aad4-d73b49ff0836",
       "metadata": {
         "id": "85611fa1-af85-40f9-aad4-d73b49ff0836"
@@ -2050,7 +2050,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": null,
       "id": "235d08d3-394e-4538-9f90-0e7249282a9f",
       "metadata": {
         "id": "235d08d3-394e-4538-9f90-0e7249282a9f",
@@ -2094,7 +2094,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": null,
       "id": "b5a58d0b-190e-45ae-932b-d5dea4b085dc",
       "metadata": {
         "id": "b5a58d0b-190e-45ae-932b-d5dea4b085dc",
@@ -2127,7 +2127,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": null,
       "id": "785b9231-c015-4b4c-a2f6-b11f6edc07a1",
       "metadata": {
         "id": "785b9231-c015-4b4c-a2f6-b11f6edc07a1"
@@ -2142,7 +2142,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": null,
       "id": "4771d8ee-a93f-44f4-9128-f656061e1374",
       "metadata": {
         "id": "4771d8ee-a93f-44f4-9128-f656061e1374",
@@ -2189,7 +2189,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": null,
       "id": "65f13281-676d-44a4-a422-6c0ccb9fb4c3",
       "metadata": {
         "id": "65f13281-676d-44a4-a422-6c0ccb9fb4c3",
@@ -2222,7 +2222,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": null,
       "id": "d6f7df56-52a5-4efd-956b-024e58d614fe",
       "metadata": {
         "id": "d6f7df56-52a5-4efd-956b-024e58d614fe"
@@ -2237,7 +2237,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": null,
       "id": "806567fd-a5a5-4d0a-8ef3-4b056f7c4537",
       "metadata": {
         "id": "806567fd-a5a5-4d0a-8ef3-4b056f7c4537"
@@ -2259,7 +2259,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": null,
       "id": "a6d22440-0fee-4136-86e1-69a943677a81",
       "metadata": {
         "id": "a6d22440-0fee-4136-86e1-69a943677a81",
@@ -2308,7 +2308,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": null,
       "id": "ca0817cb-0756-46b5-841b-13096cf0523f",
       "metadata": {
         "id": "ca0817cb-0756-46b5-841b-13096cf0523f",
@@ -2341,7 +2341,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": null,
       "id": "a915552c-f507-47ea-90ff-e8be2c5955ac",
       "metadata": {
         "id": "a915552c-f507-47ea-90ff-e8be2c5955ac",
@@ -2368,7 +2368,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": null,
       "id": "ca358d5d-016a-4e7a-ba3e-9096acf72d37",
       "metadata": {
         "id": "ca358d5d-016a-4e7a-ba3e-9096acf72d37",
@@ -2448,7 +2448,7 @@
         "outputId": "b8b1c941-3c2c-49cf-eaad-a5dae1a7f0ce"
       },
       "id": "iSmurToBuS9h",
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2489,7 +2489,7 @@
         "id": "-2-Nprmmuzcf"
       },
       "id": "-2-Nprmmuzcf",
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2511,7 +2511,7 @@
         "outputId": "af83ac72-1e59-4612-9cba-61a46aafcce7"
       },
       "id": "rAKLt5Zau8qh",
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2533,7 +2533,7 @@
         "id": "nf2tubYSwGU6"
       },
       "id": "nf2tubYSwGU6",
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2549,7 +2549,7 @@
         "outputId": "4ead0269-c2a2-474f-ef88-410307f908e8"
       },
       "id": "CViLSNnMwLit",
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2674,7 +2674,7 @@
         "outputId": "d1be90f4-0323-4dbc-f054-0c88e8815ee9"
       },
       "id": "lnCQYX-XwUmt",
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2708,7 +2708,7 @@
         "id": "WyLcG3umyuiC"
       },
       "id": "WyLcG3umyuiC",
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2756,7 +2756,7 @@
         "outputId": "653a3c4c-9db0-44e6-ea96-01212aa53d0d"
       },
       "id": "UbmBDRfe0Ck_",
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2909,7 +2909,7 @@
         "id": "pRqSxj6I9WX-"
       },
       "id": "pRqSxj6I9WX-",
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2929,7 +2929,7 @@
         "outputId": "2258f039-b700-4284-e7a1-933b1b35f8ce"
       },
       "id": "GmnGjaOz9XuD",
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2974,6 +2974,22 @@
     {
       "cell_type": "code",
       "source": [
+        "input data = (63,1,3,145,233,1,0,150,0,2.3,0,0,1)\n",
+        "input_data_as_numpy_array = np.asarray(input_data)\n",
+        "input_data_reshaped = input_data_as_numpy_array.reshape(1,-1)\n",
+        "prediction = model.predict(input_data_reshaped)\n",
+        "print(prediction)"
+      ],
+      "metadata": {
+        "id": "b7el0OhBKGj7"
+      },
+      "id": "b7el0OhBKGj7",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "import joblib\n",
         "joblib.dump(model, 'heart_disease_model.pkl')\n",
         "print(\"Model saved as heart_disease_model.pkl\")"
@@ -2986,7 +3002,7 @@
         }
       },
       "id": "MVyzbhkoHNzN",
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3004,7 +3020,7 @@
         "id": "PXB6RintHwuD"
       },
       "id": "PXB6RintHwuD",
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3014,7 +3030,7 @@
         "id": "BTXgERkIHwpU"
       },
       "id": "BTXgERkIHwpU",
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3024,7 +3040,7 @@
         "id": "fjPbPRuhHvtC"
       },
       "id": "fjPbPRuhHvtC",
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": []
     },
     {
